<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <string name="strIntro">선택을 시작하겠습니까?</string>
    <string name="strStart">시작함</string>
    <string name="strVer">좋아하는 안드로이드 버전은?</string>
    <string name="strJelly">젤리빈(4.3)</string>
    <string name="strKit">킷켓(4.4)</string>
    <string name="strLolli">롤리팝(5.0)</string>
    <string name="strExit">종료</string>
    <string name="strReset">처음으로</string>
</resources>